--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,1 @@
-*.apk filter=lfs diff=lfs merge=lfs -text
-*.exe filter=lfs diff=lfs merge=lfs -text
-Provisioning[[:space:]]Tool/ filter=lfs diff=lfs merge=lfs -text
-
+*.ext filter=lfs diff=lfs merge=lfs -text
